# pointpca2-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: example_compute_predictors.py
pointpca2_rs/: __init__.py
src/: eigenvectors.rs  features.rs  knn_search.rs  lib.rs  main.rs  pca.rs  ply_manager.rs  pooling.rs  predictors.rs  preprocessing.rs  spatial_metrics.rs  utils.rs
