[package]
name = "pointpca2_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pointpca2_rs"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "*"
ordered-float = { version = "4.0", default-features = true }
num-traits = "*"
kiddo = "*"
libm = "*"
ply-rs = "*"
numpy = "0.15"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]