[package]
edition = "2021"
name = "pointpca2-rs"
description = "An implementation of PointPCA2 in Rust"
version = "1.4.2"
readme = "README.md"
repository = "https://github.com/akaTsunemori/pointpca2-rs"
license = "MIT"

[dependencies]
nalgebra = "0.32.5"
ordered-float = "4.0"
num-traits = "0.2.19"
libm = "0.2.8"
ply-rs = "0.1.3"
rayon = "1.10.0"
kd-tree = {version = "0.6.0", features = ["rayon"]}

[lib]
name = "pointpca2_rs"
path = "src/lib.rs"
